--- a/portafolio/package.json
+++ b/portafolio/package.json
@@ -2,6 +2,7 @@
   "name": "portafolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://licesdev.github.io/Portafolio/npm install gh-pages ",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -10,7 +11,6 @@
     "@types/node": "^16.18.113",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
-    "gh-pages": "^6.2.0",
     "pixel-retroui": "^1.0.67",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -43,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.2.0"
   }
 }
